--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,7 +41,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/, role: ROLE_USER }
-        - { path: ^/newUser, roles: ROLE_ADMIN }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, roles: ROLE_USER }
+        - { path: ^/.*/user/create, roles: ROLE_ADMIN }
+        - { path: ^/.*/user/all, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
